# hpp

./: .travis.yml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
hpp/: CMakeLists.txt  aligned_allocator.hpp  any.hpp  crc.hpp  criteria.hpp  filesystem.hpp  optional.hpp  small_any.hpp  source_location.hpp  string_view.hpp  type_index.hpp  type_name.hpp  utility.hpp  uuid.hpp  variant.hpp
hpp/detail/: filesystem_impl.hpp
hpp/utility/: constexpr_if.hpp  for_each.hpp  if_constexpr.hpp  invoke.hpp
tests/: CMakeLists.txt  main.cpp
